tests/paczka1/fuzzy1/14097307.err
Error in line 1: gTaSnWFaE93 S75 6,5
Error in line 19: CNPVqjiXcEn S505 15,4
Error in line 20: CNPVqjiXcEn A952 62,8
Error in line 23: QbbP S924 75,3
Error in line 14: S924 S505 182,9
